--- a/Python Assessment.ipynb
+++ b/Python Assessment.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "The duration of the assignment is **1h approx**.\n",
     "\n",
-    "For the submission, please fill the following typeform an email with your submission attached to hello@akademy.ai (email subect: AI Engineering Bootcamp Assessment |NAME|)\n",
+    "For the submission, please fill the following typeform link provided in the instructions email (you can upload your  submission there. \n",
     "\n",
     "\n",
     "## Tasks\n",
@@ -290,7 +290,7 @@
     "\n",
     "Please complete the definition of the function. Here is what you can assume about this function:<br>\n",
     "* The input parameter `text` is a string text. \n",
-    "* The function `count_words` the dictionary containing all the words with their quantities sorted in alphabetical order.\n",
+    "* The function `count_words` a list of tuples containing the dictionary pairs (keys and values) of all the words with their quantities sorted in alphabetical order. Note that you can output a dictionary but sorting it will prove to be an additional challenge. \n",
     "\n",
     "For example:"
    ]
