--- a/Python Assessment.ipynb
+++ b/Python Assessment.ipynb
@@ -199,25 +199,22 @@
     "\n",
     "Please complete the definition of the function. Here is what you can assume about this function:\n",
     "* The input parameter `text` is a string text. \n",
-    "* The function `count_vowels` must return an int with the count of different vowels present in the input text.\n",
+    "* The function `count_vowels` must return an dictionary with each different vowel and its counts in the input text.\n",
     "\n",
     "For example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'e': 1, 'i': 2, 'o': 0, 'u': 0}\n"
+     ]
     }
    ],
    "source": [
@@ -289,8 +286,9 @@
     "Write a program that takes a text as input, splits it into words (where everything that is not a letter is considered a word boundary), and case-insensitively builds a dictionary that stores for every word how often it occurs in the text. Then return the dictionary containing all the words with their quantities sorted in alphabetical order.\n",
     "\n",
     "Please complete the definition of the function. Here is what you can assume about this function:<br>\n",
-    "* The input parameter `text` is a string text. \n",
-    "* The function `count_words` a list of tuples containing the dictionary pairs (keys and values) of all the words with their quantities sorted in alphabetical order. Note that you can output a dictionary but sorting it will prove to be an additional challenge. \n",
+    "* The input parameter `text` is a string text.\n",
+    "* The function `count_words` as a dictionary of all the words with their quantities. \n",
+    "* BONUS: The function `count_words` a list of tuples containing the dictionary pairs (keys and values) of all the words with their quantities sorted in alphabetical order. Note that sorting it will prove to be an additional challenge. \n",
     "\n",
     "For example:"
    ]
